--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,7 +37,7 @@
             "label": "regenerate makefile",
             "type": "shell",
             "command": "cmake",
-            "args": ["-DCMAKE_GENERATOR_PLATFORM=x64", ".."],
+            "args": ["-DCMAKE_GENERATOR_PLATFORM=x64", "-DCMAKE_BUILD_TYPE=Debug", ".."],
             "options": {
                 "shell": {
                     "executable": "cmd.exe",
