--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Ejecutar",
+            "name": "Ejecutar (Debug)",
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/metaheuristicas.exe",
@@ -14,7 +14,19 @@
             "cwd": "${workspaceRoot}",
             "environment": [],
             "console": "externalTerminal",
-            "preLaunchTask": "cargo build"
+            "preLaunchTask": "cargo build debug"
+        },
+        {
+            "name": "Ejecutar (Release)",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceRoot}/target/debug/metaheuristicas.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceRoot}",
+            "environment": [],
+            "console": "externalTerminal",
+            "preLaunchTask": "cargo build release"
         },
     ]
 }
