--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,19 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "cargo build",
+            "label": "cargo build debug",
             "type": "shell",
             "command": "cargo",
             "args": ["build"],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
+        },
+        {
+            "label": "cargo build release",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["build", "--release"],
             "options": {
                 "cwd": "${workspaceFolder}"
             }
